# bevel

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  bevel.py  bevel.spec  clean_demo.yaml  cli.py  cli_utils.py  composite_level_example.yaml  create_test_sprites.py  enemy_movement.py  entity.py  level_loader.py  level_manager.py  main.py  player_movement.py  pyproject.toml  pytest.ini  requirements.txt  runner.py  setup.py  sprite_scale_test.yaml  update.sh
.claude/: settings.local.json
bevel/: __init__.py  __main__.py  cli.py  engine.py  level_manager.py  runner.py
bevel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bevel/cli/: __init__.py  main.py
bevel/core/: __init__.py  lifecycle.py  node.py  scene.py  scene_loader.py  signals.py  transform.py  transform3d.py  transitions.py
bevel/development/: __init__.py  hot_reload.py
bevel/input/: __init__.py  input_context.py  input_manager.py
bevel/nodes/: __init__.py  node_2d.py  node_3d.py
bevel/physics/: __init__.py  box2d.py  jolt.py
bevel/physics/jolt_bindings/: CMakeLists.txt  __init__.py  jolt_wrapper.cpp
bevel/project_template/levels/: test_level.yaml
bevel/rendering/: __init__.py  layers.py  renderer.py
bevel/resources/: __init__.py  resource_groups.py  resource_manager.py
bevel/utils/: __init__.py  logger.py  math.py  time.py
components/: rigidbody2d.py  sprite_renderer.py
docs/: HOT_RELOAD.md
engine/: base_scene.py  entity.py  prefab_loader.py  script.py  signals.py
example/: config.yaml
example/scenes/: level_1.yaml  level_2.yaml
example/scripts/: player_movement.py
examples/3d_demo/: README.md  input.yaml  project.yaml  resources.yaml
examples/3d_demo/scenes/: main.yaml
examples/3d_demo/scripts/: camera_follow.py  health_ui.py  player_health.py  player_movement.py
examples/hello_world/: input.yaml  project.yaml  resources.yaml
examples/hello_world/prefabs/: camera.yaml  ground.yaml  platform.yaml  player.yaml
examples/hello_world/scenes/: main.yaml
examples/hello_world/scripts/: camera_follow.py  platform.py  player.py
factories/: entity_factory.py
levels/: test_level.yaml
managers/: ldtk_loader.py  scene_manager.py
managers/scene_builders/: scene_loader.py
prefabs/: level1.yaml
rendering/: entity_renderer.py
saves/: savegame.yaml
scenes/: menu_scene.py
scripts/: bounce_script.py  install_bevel_shim.sh  player_controller.py
tests/: __init__.py  conftest.py  test_hot_reload.py  test_input_contexts.py  test_layers.py  test_lifecycle.py  test_multi_script.py  test_resource_groups.py  test_signals.py  test_transitions.py
util/: consts.py  file_parser.py  funcs.py  script_wrapper.py  tiled_parser.py
